<resources>
    <string name="AAA">AAA</string>
    <string name="app_name">Treble Settings</string>
    <string name="title_activity_settings">Treble Settings</string>
    <string name="desc_activity_top_level">Device specific settings</string>
    <string name="default_string">Default</string>
    <string name="error">Error</string>
    <string name="continue_string">Continue?</string>
    <string name="warning">Warning</string>
    <string name="requires_reboot">Requires a reboot</string>
    <string name="requires_root">Requires root access</string>
    <string name="requires_systemui_restart">Requires SystemUI restart</string>
    <string name="enable_dt2w">Enable double tap to wake</string>
    <string name="enable_usb_otg">Enable USB OTG</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="general_title">General</string>
    <string name="audio_policy_title">Audio policy</string>
    <string name="display_title">Display</string>
    <string name="refresh_rate_title">Refresh rate</string>
    <string name="render_engine_title">Render engine</string>
    <string name="workarounds_title">Workarounds</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="audio_title">Audio</string>
    <string name="telephony_title">Telephony</string>
    <string name="camera_title">Camera</string>
    <string name="fingerprint_title">Fingerprint</string>
    <string name="requirements_title">Requirements</string>
    <string name="touchscreen_title">Touchscreen</string>
    <string name="leds_title">Leds</string>
    <string name="boosts_title">Boosts</string>
    <string name="mobile_network_title">Mobile network</string>
    <string name="smsc_title">SMSC Settings</string>
    <string name="sim_title">SIM Settings</string>
    <string name="tools_title">Tools</string>
    <string name="status_bar_title">Status Bar</string>
    <string name="use_alternate_audio_policy">Use alternate audio policy</string>
    <string name="hide_audio_vendor_title">Hide extra vendor audio configs</string>
    <string name="hide_audio_vendor_summary">May be required on CAF based devices</string>
    <string name="alternate_headsets_title">Use alternate way to detect headsets</string>
    <string name="alternate_headsets_summary">Standard fix for wired headphones recognition</string>
    <string name="disable_audio_effects_title">Disable audio effects</string>
    <string name="disable_audio_effects_summary">Disable all of thems on vendor side</string>
    <string name="disable_fast_audio_title">Disable fast audio</string>
    <string name="disable_fast_audio_summary">Should fix cracked/broken/stutter audio on devices which cannot handle it</string>
    <string name="disable_voice_callin_title">Disable &quot;Voice Call In&quot; route</string>
    <string name="disable_voice_callin_summary">May fix echo or non-working audio on calls\nRequires a reboot</string>
    <string name="restart_audio_services">Restart audio services</string>
    <string name="use_sysbt_hal">Use System Wide BT HAL</string>
    <string name="max_bt_connected_devices">Set maximum connected bluetooth audio devices</string>
    <string name="set_esco_size">Set eSCO transport unit size</string>
    <string name="disable_leapcfe_title">Disable LE APCF Extended features</string>
    <string name="disable_leapcfe_summary">Fix permanently crashing on some devices</string>
    <string name="cap_le_vendor">Cap LE vendor version</string>
    <string name="predefinded_worksrounds">Predefined workarounds</string>
    <string name="set_unsupported_bt_commands">Set unsupported Bluetooth commands</string>
    <string name="set_unsupported_bt_og">Set unsupported Bluetooth og features</string>
    <string name="set_unsupported_bt_le">Set unsupported Bluetooth LE features</string>
    <string name="set_unsupported_bt_states">Set unsupported Bluetooth states</string>
    <string name="force_refresh_rate">Force Refresh rate</string>
    <string name="dynamic_refresh_rate_title">Dynamic Refresh rate</string>
    <string name="dynamic_refresh_rate_summary">Adjust refresh rate based on screen content\nRequires reboot</string>
    <string name="render_engine_backend">Render engine backend</string>
    <string name="blu_algorithm">Blur algorithm</string>
    <string name="enable_sfgl_backpressure_title">Enable SF GL backpressure</string>
    <string name="enable_sfgl_backpressure_summary">Might improve rendering performance\nRequires reboot</string>
    <string name="enable_sfhwc_backpressure_title">Enable SF HWC backpressure</string>
    <string name="enable_sfhwc_backpressure_summary">Might improve rendering performance</string>
    <string name="disable_hw_overlays_title">Disable HW overlays</string>
    <string name="disable_hw_overlays_summary">Eats more CPU and battery</string>
    <string name="force_allow_aod">Force allow Always-On Display</string>
    <string name="enable_fingerprint_gesture">Enable Fingerprint gestures</string>
    <string name="force_headset_switch">Force headset switch</string>
    <string name="enable_glove_mode">Enable touchscreen glove mode</string>
    <string name="enable_graphic_issue_workaround_title">Enable graphic issues workaround</string>
    <string name="enable_graphic_issue_workaround_summary">Recommended if ui is blurry</string>
    <string name="huawei_fast_charge">Huawei fast charge</string>
    <string name="create_ims_apn">Create IMS APN</string>
    <string name="download_ims">Download and install IMS APK</string>
    <string name="request_ims_network">Request IMS network</string>
    <string name="force_presence_4g_calling">Force the presence of 4G Calling setting</string>
    <string name="allow_binder_thread_title">Allow binder thread on incoming calls</string>
    <string name="allow_binder_thread_summary">Workaround for 4G calling\nRequires a reboot</string>
    <string name="rotation_perf_hint_title">Rotation perf hint instead of touch</string>
    <string name="rotation_perf_hint_summary">Swap touch boost behaviour</string>
    <string name="mtk_ged_kpi_title">Mediatek GED KPI support</string>
    <string name="mtk_ged_kpi_summary">Might improve GPU performance for Mediatek devices</string>
    <string name="forward_support_forcecognitive_title">Forward-port support for forceCognitive</string>
    <string name="forward_support_forcecognitive_summary">Required on somes mtk devices</string>
    <string name="enable_high_touch_sample_rate_title">Enable high touch sample rate</string>
    <string name="enable_high_touch_sample_rate_title_summary">Drain more battery</string>
    <string name="enable_high_touch_title">Enable high touch sensitivity</string>
    <string name="enable_high_touch_summary">While using gloves</string>
    <string name="enable_game_mode_title">Enable game mode</string>
    <string name="enable_game_mode_summary">Auto stop fan is disabled</string>
    <string name="enable_shoulder_buttons_title">Enable shoulder buttons</string>
    <string name="enable_shoulder_buttons_summary">Shoulder buttons/triggers</string>
    <string name="enable_bypass_charger_title">Enable bypass charger</string>
    <string name="enable_bypass_charger_summaryOff">Charger -> Battery -> Phone</string>
    <string name="enable_bypass_charger_summaryOn">Charger -> Phone</string>
    <string name="fan_speed_title">FAN speed</string>
    <string name="fan_speed_summary">Support smart charging</string>
    <string name="redmagic_logo_breath">Make Redmagic logo breath</string>
    <string name="redmagic_rgb">REDMAGIC RGB</string>
    <string name="boost_cpu">Boost CPU</string>
    <string name="boost_caches">Boost caches</string>
    <string name="boost_gpu">Boost GPU</string>
    <string name="boost_ufs_title">Boost UFS</string>
    <string name="boost_ufs_summary">Increase Read/Write speed</string>
    <string name="use_añternate_camera_profile">Use alternate camera profile</string>
    <string name="disable_soundvolume_effect_title">Disable soundvolume effect</string>
    <string name="disable_soundvolume_effect_summary">May fix audio distorsion</string>
    <string name="disable_voip_stereo_support_title">Disable VoIP stereo support</string>
    <string name="disable_voip_stereo_support_summary">May fix high pitched audio. Requires a reboot</string>
    <string name="define_voip_direct_output_title">Define VoIP as Direct Output</string>
    <string name="define_voip_direct_output_summary">Should fix high pitched audio. Requires a reboot</string>
    <string name="restart_qcril_on_boot_title">Restart qcrild on boot</string>
    <string name="restart_qcril_on_boot_summary">Workaround for incoming SMS\nCan lead to no-audio on calls for some devices</string>
    <string name="enable_stereo_audio_mode">Enable stereo audio mode</string>
    <string name="disable_built_backin_mic_title">Disable Built-In Back Mic</string>
    <string name="disable_built_backin_mic_summary">May fix broken mic on video recording</string>
    <string name="enable_extended_brightness">Enable extended brightness range</string>
    <string name="enable_reversed_wireless_charging">Enable reversed wireless charging</string>
    <string name="clicking_fp_turn_device_on">Clicking fingerprint turns device on</string>
    <string name="enable_all_cameras_access_title">Enable access to all cameras</string>
    <string name="enable_all_cameras_access_summary">Requires Q vendor</string>
    <string name="set_flash_strength_title">Set flash strength</string>
    <string name="set_flash_strength_summary">Usually values are integers between 1 and 5</string>
    <string name="enable_extra_sensors">Enable extra sensors</string>
    <string name="enable_workaround_whiteish_screen">Enable workaround for white-ish screen</string>
    <string name="enable_worksround_broken_fp">Enable workaround for broken fingerprint</string>
    <string name="set_backlight_scale">Set backlight scale/max backlight level</string>
    <string name="smsc_workaround_title">SMSC Workaround</string>
    <string name="smsc_workaround_summary">May requires be disabled on some devices to receive SMS</string>
    <string name="restricted_networking_title">Restricted networking mode</string>
    <string name="restricted_networking_summary">Requires be disabled for some devices</string>
    <string name="force_5g_network_title">Force display 5G network</string>
    <string name="force_5g_network_summary">Displays 5G as an option for the preferred network type\nRequires a reboot</string>
    <string name="set_smsc1">Set SMSC for SIM 1</string>
    <string name="set_smsc2">Set SMSC for SIM 2</string>
    <string name="set_smsc3">Set SMSC for SIM 3</string>
    <string name="set_smsc4">Set SMSC for SIM 4</string>
    <string name="sim_count_title">SIM Count</string>
    <string name="reset_simcount_title">Reset SIM Count</string>
    <string name="reset_simcount_summary">Reset SIM count to default values \nRequires a Reboot</string>
    <string name="signal_meter_method">Signal meter method</string>
    <string name="auto_restart_ril">Automatically restart RIL</string>
    <string name="remove_telephony_subsystem_title">Remove Telephony Subsystem</string>
    <string name="remove_telephony_subsystem_summary">For devices without simcard</string>
    <string name="enable_two_pane_title">Two-Pane Layout</string>
    <string name="enable_two_pane_summary">Enable tablet Layout. Requires restart apps</string>
    <string name="force_navigation_bar">Force navigation bar disabled</string>
    <string name="pointer_type">Pointer type</string>
    <string name="fod_icon_color">FOD Icon color</string>
    <string name="status_bar_padding_top">Set status bar top padding</string>
    <string name="status_bar_padding_start">Set status bar start padding</string>
    <string name="status_bar_padding_end">Set status bar end padding</string>
    <string name="restart_system_ui">Restart SystemUI</string>
</resources>