<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/touchscreen_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="nubia_double_tap_to_wake"
            app:title="@string/enable_dt2w" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="nubia_high_touch_sample_rate"
            app:title="@string/enable_high_touch_sample_rate_title"
            app:summary="@string/enable_high_touch_sample_rate_title_summary" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="nubia_high_touch_sensitivity"
            app:title="@string/enable_high_touch_title"
            app:summary="@string/enable_high_touch_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/miscellaneous_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="nubia_touchscreen_game_mode"
            app:title="@string/enable_game_mode_title"
            app:summaryOn="@string/enable_game_mode_summary" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="nubia_shoulder_btn"
            app:title="@string/enable_shoulder_buttons_title"
            app:summary="@string/enable_shoulder_buttons_summary" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="nubia_bypass_charger"
            app:title="@string/enable_bypass_charger_title"
            app:summaryOff="@string/enable_bypass_charger_summaryOff"
            app:summaryOn="@string/enable_bypass_charger_summaryOn" />
        <ListPreference
            app:defaultValue="0"
            app:entries="@array/pref_nubia_fan"
            app:entryValues="@array/pref_nubia_fan_values"
            app:key="nubia_fan_speed"
            app:title="@string/fan_speed_title"
            app:summary="@string/fan_speed_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/leds_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="nubia_redmagic_logo_breath"
            app:title="@string/redmagic_logo_breath" />
        <ListPreference
            app:defaultValue="-1"
            app:entries="@array/pref_nubia_redmagic_led"
            app:entryValues="@array/pref_nubia_redmagic_led_values"
            app:key="nubia_redmagic_led"
            app:title="@string/redmagic_rgb" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/boosts_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="nubia_boost_cpu"
            app:title="@string/boost_cpu" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="nubia_boost_cache"
            app:title="@string/boost_caches" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="nubia_boost_gpu"
            app:title="@string/boost_gpu" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="nubia_boost_ufs"
            app:title="@string/boost_ufs_title"
            app:summaryOn="@string/boost_ufs_summary" />
    </PreferenceCategory>

</PreferenceScreen>
