<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/workarounds_title">
        <SwitchPreference
            app:key="key_telephony_smsc_workaround"
            app:defaultValue="true"
            app:title="@string/smsc_workaround_title"
            app:summary="@string/smsc_workaround_summary" />
        <SwitchPreference
            app:key="key_telephony_restricted_networking"
            app:defaultValue="false"
            app:title="@string/restricted_networking_title"
            app:summary="@string/restricted_networking_summary" />
        <SwitchPreference
            app:key="key_telephony_force_display_5g"
            app:defaultValue="false"
            app:title="@string/force_5g_network_title"
            app:summary="@string/force_5g_network_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/smsc_title">
        <EditTextPreference
            app:key="key_telephony_smsc0"
            app:title="@string/set_smsc1"
            app:inputType="text"
            app:summary="Default" />
        <EditTextPreference
            app:key="key_telephony_smsc1"
            app:title="@string/set_smsc2"
            app:inputType="text"
            app:summary="Default" />
        <EditTextPreference
            app:key="key_telephony_smsc2"
            app:title="@string/set_smsc3"
            app:inputType="text"
            app:summary="Default" />
        <EditTextPreference
            app:key="key_telephony_smsc3"
            app:title="@string/set_smsc4"
            app:inputType="text"
            app:summary="Default" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sim_title">
        <ListPreference
            app:key="key_telephony_simcount"
            app:defaultValue="default"
            app:entries="@array/pref_telephony_simcount"
            app:entryValues="@array/pref_telephony_simcount_values"
            app:title="@string/sim_count_title" />
        <Preference
            app:key="key_telephony_reset_simcount"
            app:title="@string/reset_simcount_title"
            app:summary="@string/reset_simcount_summary" />
    </PreferenceCategory>
    
    <PreferenceCategory app:title="@string/general_title">
        <ListPreference
            app:key="key_telephony_mobile_signal"
            app:defaultValue="default"
            app:entries="@array/pref_telephony_mobile_signal"
            app:entryValues="@array/pref_telephony_mobile_signal_values"
            app:title="@string/signal_meter_method" />
        <SwitchPreference
            app:key="key_telephony_restart_ril"
            app:defaultValue="false"
            app:title="@string/auto_restart_ril" />
        <Preference
            app:key="key_telephony_removetelephony"
            app:title="@string/remove_telephony_subsystem_title"
            app:summary="@string/remove_telephony_subsystem_summary" />
    </PreferenceCategory>

</PreferenceScreen>
