<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/audio_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_samsung_audio_stereo"
            app:title="@string/enable_stereo_audio_mode" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_samsung_disable_back_mic"
            app:title="@string/disable_built_backin_mic_title"
            app:summary="@string/disable_built_backin_mic_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/display_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_samsung_high_brightness"
            app:title="@string/enable_extended_brightness" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_samsung_glove_mode"
            app:title="@string/enable_glove_mode" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/miscellaneous_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_samsung_wireless_charging_transmit"
            app:title="@string/enable_reversed_wireless_charging" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_samsung_double_tap_to_wake"
            app:title="@string/enable_dt2w" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_samsung_fod_single_click"
            app:title="@string/clicking_fp_turn_device_on" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_samsung_camera_ids"
            app:title="@string/enable_all_cameras_access_title"
            app:summary="@string/enable_all_cameras_access_summary" />
		<EditTextPreference
            app:defaultValue="1"
            app:key="key_samsung_flash_strength"
	        app:title="@string/set_flash_strength_title"
	        app:summary="@string/set_flash_strength_summary"
	        app:inputType="number" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/workarounds_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_samsung_extra_sensors"
            app:title="@string/enable_extra_sensors" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_samsung_colorspace"
            app:title="@string/enable_workaround_whiteish_screen" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_samsung_broken_fingerprint"
            app:title="@string/enable_worksround_broken_fp" />
        <EditTextPreference
            app:defaultValue="-1"
            app:key="key_samsung_backlight_multiplier"
            app:title="@string/set_backlight_scale"
            app:inputType="number" />
    </PreferenceCategory>

</PreferenceScreen>
