<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/camera_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_qualcomm_alternate_mediaprofile"
            app:title="@string/use_añternate_camera_profile"
            app:summary="@string/requires_reboot" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/audio_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_qualcomm_disable_soundvolume_effect"
            app:title="@string/disable_soundvolume_effect_title"
            app:summary="@string/disable_soundvolume_effect_summary" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_qualcomm_disable_stereo_voip"
            app:title="@string/disable_voip_stereo_support_title"
            app:summary="@string/disable_voip_stereo_support_summary" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_qualcomm_direct_output_voip"
            app:title="@string/define_voip_direct_output_title"
            app:summary="@string/define_voip_direct_output_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/mobile_network_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_qualcomm_restart_qcrild"
            app:title="@string/restart_qcril_on_boot_title"
            app:summary="@string/restart_qcril_on_boot_summary" />
    </PreferenceCategory>

</PreferenceScreen>
