<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/audio_policy_title">
        <ListPreference
            app:defaultValue="auto"
            app:key="key_audio_alternate_audiopolicy"
            app:entries="@array/pref_audio_alternate_audio_policy"
            app:entryValues="@array/pref_audio_alternate_audio_policy_values"
            app:title="@string/use_alternate_audio_policy" />

        <Preference
            app:defaultValue="auto"
            app:key="key_audio_restart_audio_services"
            app:title="@string/restart_audio_services" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_audio_empty_mount_audio"
            app:title="@string/hide_audio_vendor_title"
            app:summary="@string/hide_audio_vendor_summary"/>

        <SwitchPreference
            app:defaultValue="false"
            app:key="key_audio_headset_devinput"
            app:title="@string/alternate_headsets_title"
            app:summary="@string/alternate_headsets_summary"/>
    
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_audio_disable_audio_effects"
            app:title="@string/disable_audio_effects_title"
            app:summary="@string/disable_audio_effects_summary"/>
    
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_audio_disable_fast_audio"
            app:title="@string/disable_fast_audio_title"
            app:summary="@string/disable_fast_audio_summary"/>
    
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_audio_disable_voice_call_in"
            app:title="@string/disable_voice_callin_title"
            app:summary="@string/disable_voice_callin_summary" />
    </PreferenceCategory>

</PreferenceScreen>
