<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/general_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_ui_two_pane_layout"
            app:title="@string/enable_two_pane_title"
            app:summary="@string/enable_two_pane_summary"/>

        <SwitchPreference
            app:defaultValue="false"
            app:key="key_UI_force_navbar_off"
            app:title="@string/force_navigation_bar"
            app:summary="@string/requires_reboot" />

        <ListPreference
            app:defaultValue="mouse"
            app:entries="@array/pref_ui_custom_pointer_type"
            app:entryValues="@array/pref_ui_custom_pointer_type_values"
            app:key="key_ui_pointer_type"
            app:title="@string/pointer_type" />

        <ListPreference
            app:defaultValue="00ff00"
            app:entries="@array/pref_ui_fod_color"
            app:entryValues="@array/pref_ui_fod_color_values"
            app:key="key_ui_fod_color"
            app:title="@string/fod_icon_color" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/status_bar_title">
        <EditTextPreference
            app:key="key_ui_sb_padding_top"
            app:title="@string/status_bar_padding_top"
            app:inputType="number"
            app:hint="@string/requires_systemui_restart" />

        <EditTextPreference
            app:key="key_ui_sb_padding_start"
            app:title="@string/status_bar_padding_start"
            app:inputType="number"
            app:hint="@string/requires_systemui_restart" />

        <EditTextPreference
            app:key="key_ui_sb_padding_end"
            app:title="@string/status_bar_padding_end"
            app:inputType="number"
            app:hint="@string/requires_systemui_restart" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/tools_title">
        <Preference
            app:key="key_ui_restart_systemui"
            app:title="@string/restart_system_ui"
            app:summary="@string/requires_root" />
    </PreferenceCategory>

</PreferenceScreen>
