<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/refresh_rate_title">
        <ListPreference
            app:defaultValue="-1"
            app:entries="@array/pref_display_fps"
            app:entryValues="@array/pref_display_fps_values"
            app:key="key_display_display_fps"
            app:title="@string/force_refresh_rate" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="key_display_dynamic_fps"
            app:title="@string/dynamic_refresh_rate_title"
            app:summary="@string/dynamic_refresh_rate_summary"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/render_engine_title">
        <ListPreference
            app:defaultValue=""
            app:entries="@array/pref_display_sf_renderengine_backend"
            app:entryValues="@array/pref_display_sf_renderengine_backend_values"
            app:key="key_display_sf_renderengine_backend"
            app:title="@string/render_engine_backend" />

        <ListPreference
            app:defaultValue="kawase"
            app:entries="@array/pref_display_sf_blur_algorithm"
            app:entryValues="@array/pref_display_sf_blur_algorithm_values"
            app:key="key_display_sf_blur_algorithm"
            app:title="@string/blu_algorithm" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general_title">
        <SwitchPreference
            app:defaultValue="true"
            app:key="key_display_enable_sf_gl_backpressure"
            app:title="@string/enable_sfgl_backpressure_title"
            app:summary="@string/enable_sfgl_backpressure_summary"/>

        <SwitchPreference
            app:defaultValue="true"
            app:key="key_display_enable_sf_hwc_backpressure"
            app:title="@string/enable_sfhwc_backpressure_title"
            app:summary="@string/enable_sfhwc_backpressure_summary"/>

        <SwitchPreference
            app:defaultValue="false"
            app:key="key_display_no_hwcomposer"
            app:title="@string/disable_hw_overlays_title"
            app:summary="@string/disable_hw_overlays_summary" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="key_display_aod"
            app:title="@string/force_allow_aod" />
    </PreferenceCategory>

</PreferenceScreen>
