<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/fingerprint_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_huawei_fingerprint_gestures"
            app:title="@string/enable_fingerprint_gesture" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/audio_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_huawei_headset_fix"
            app:title="@string/force_headset_switch" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/display_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_huawei_touchscreen_glove_mode"
            app:title="@string/enable_glove_mode" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_huawei_no_hwcomposer"
            app:title="@string/enable_graphic_issue_workaround_title"
            app:summary="@string/enable_graphic_issue_workaround_summary"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/miscellaneous_title">
	    <ListPreference
		    app:defaultValue="-1"
		    app:entries="@array/pref_huawei_fast_charge"
		    app:entryValues="@array/pref_huawei_fast_charge_values"
		    app:key="key_huawei_fast_charge"
		    app:title="@string/huawei_fast_charge" />
    </PreferenceCategory>

</PreferenceScreen>
