<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/general_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_mtk_mediatek_touch_hint_rotate"
            app:title="@string/rotation_perf_hint_title"
            app:summary="@string/rotation_perf_hint_summary"/>

        <SwitchPreference
            app:defaultValue="false"
            app:key="key_mtk_mediatek_ged_kpi"
            app:title="@string/mtk_ged_kpi_title"
            app:summary="@string/mtk_ged_kpi_summary"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/telephony_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_mtk_force_cognitive"
            app:title="@string/forward_support_forcecognitive_title"
            app:summary="@string/forward_support_forcecognitive_summary"/>
    </PreferenceCategory>
    
</PreferenceScreen>
