<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/requirements_title">
        <Preference
            app:title="@string/create_ims_apn"
            app:key="key_ims_create_apn" />
        <Preference
            app:title="@string/download_ims"
            app:key="key_ims_install_apn" />
        <SwitchPreference
            app:defaultValue="true"
            app:key="key_ims_request_network"
            app:title="@string/request_ims_network" />
        <SwitchPreference
            app:defaultValue="true"
            app:key="key_ims_force_enable_setting"
            app:title="@string/force_presence_4g_calling" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/workarounds_title">
        <SwitchPreference
            app:defaultValue="false"
            app:key="key_ims_allow_binder_thread_on_incoming_calls"
            app:title="@string/allow_binder_thread_title"
            app:summary="@string/allow_binder_thread_summary" />
    </PreferenceCategory>

</PreferenceScreen>
